--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,8 +14,15 @@ body {
 }
 
 .page-container {
-  width: min(100%, 730px);
+  width: 100%;
+  max-width: 730px;
   margin: 0 auto;
+}
+
+@media (min-width: 1440px) {
+  .page-container {
+    max-width: 1110px;
+  }
 }
 
 .visually-hidden {
@@ -28,10 +35,4 @@ body {
   white-space: nowrap;
   border: 0;
   clip: rect(0, 0, 0, 0);
-}
-
-@media (min-width: 1440px) {
-  .page-container {
-    width: min(100%, 1110px);
-  }
 }
